// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List templates tests query template request should match snapshot 1`] = `
{
  "input": {
    "ExpressionAttributeNames": {
      "#PK": "PK",
    },
    "ExpressionAttributeValues": {
      ":PK": "template#00000000-0000-0000-0000-000000000000",
    },
    "KeyConditionExpression": "(#PK = :PK)",
    "ProjectionExpression": undefined,
    "ScanIndexForward": true,
    "TableName": "name-templates",
  },
  "result": {
    "cursor": "mock-cursor",
    "items": [
      {
        "created": "2023-01-01T00:00:00Z",
        "group": "mock-group",
        "id": "00000000-0000-0000-0000-000000000000",
        "modified": "2023-01-01T00:00:00Z",
        "source": "mock-source",
        "target": "mock-target",
        "template": {},
        "version": 1,
      },
      {
        "created": "2023-01-01T00:00:00Z",
        "group": "mock-group",
        "id": "00000000-0000-0000-0000-000000000000",
        "modified": "2023-01-01T00:00:00Z",
        "source": "mock-source",
        "target": "mock-target",
        "template": {},
        "version": 1,
      },
      {
        "created": "2023-01-01T00:00:00Z",
        "group": "mock-group",
        "id": "00000000-0000-0000-0000-000000000000",
        "modified": "2023-01-01T00:00:00Z",
        "source": "mock-source",
        "target": "mock-target",
        "template": {},
        "version": 1,
      },
    ],
  },
}
`;

exports[`List templates tests query template request with default params should match snapshot 1`] = `
{
  "input": {
    "ExpressionAttributeNames": {
      "#PK": "PK",
      "#SK": "SK",
    },
    "ExpressionAttributeValues": {
      ":PK": "template#00000000-0000-0000-0000-000000000000",
      ":SK": "version",
    },
    "KeyConditionExpression": "(#PK = :PK) and begins_with(#SK, :SK)",
    "ProjectionExpression": undefined,
    "ScanIndexForward": true,
    "TableName": "name-templates",
  },
  "result": {
    "cursor": "mock-cursor",
    "items": [
      {
        "created": "2023-01-01T00:00:00Z",
        "group": "mock-group",
        "id": "00000000-0000-0000-0000-000000000000",
        "modified": "2023-01-01T00:00:00Z",
        "source": "mock-source",
        "target": "mock-target",
        "template": {},
        "version": 1,
      },
      {
        "created": "2023-01-01T00:00:00Z",
        "group": "mock-group",
        "id": "00000000-0000-0000-0000-000000000000",
        "modified": "2023-01-01T00:00:00Z",
        "source": "mock-source",
        "target": "mock-target",
        "template": {},
        "version": 1,
      },
      {
        "created": "2023-01-01T00:00:00Z",
        "group": "mock-group",
        "id": "00000000-0000-0000-0000-000000000000",
        "modified": "2023-01-01T00:00:00Z",
        "source": "mock-source",
        "target": "mock-target",
        "template": {},
        "version": 1,
      },
    ],
  },
}
`;
